# ThermoScreening

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  RELEASING.md  codecov.yml  environment.yml  pyproject.toml  pytest.ini
.github/: release.yml
.github/workflows/: docs.yml  publish.yml  python-app.yml
ThermoScreening/: __init__.py  __main__.py  _version.py  config.py  dftb_data.py  exceptions.py  version.py
ThermoScreening.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ThermoScreening/calculator/: __init__.py  dftbplus.py  orca.py  qm.py  xtb.py  xtb_cli.py
ThermoScreening/cli/: __init__.py  dftb_setup.py  slurm.py  thermo.py
ThermoScreening/gibbs_dftb/: atom_properties.c  constants.h  eigenvalue.py  electronic_energy.txt  frequency.txt
ThermoScreening/old_gibbs_dftb/: Makefile  README.md  eigenvalue.c  geo_opt.xyz  gibbs_control.c  gibbs_dftb.c  mass.txt  thermo.py  thermo_old.py
ThermoScreening/thermo/: .gitignore  __init__.py  _units.py  api.py  atoms.py  cell.py  conformers.py  ensemble.py  inputFileReader.py  kinetics.py  physicalConstants.py  pka.py  reactions.py  redox_screening.py  screening.py  system.py  thermo.py
ThermoScreening/utils/: __init__.py  custom_logging.py  header.py  physicalConstants.py
conda-recipes/: README.md
conda-recipes/pqanalysis/: meta.yaml
docs/: api.rst  conf.py  configuration.rst  index.rst  installation.rst  redox_screening.rst  usage.rst
docs/_static/: custom.css
docs/benchmarks/: anthraquinone_workflow.rst  entropy_accuracy.md  entropy_accuracy.rst  qm9_thermochemistry.rst
examples/: geo_opt.xyz  thermo.in
examples/Notebooks/: .gitignore
examples/Notebooks/dftbplus/: ThermoScreening.ipynb
scripts/: validate_anthraquinone_zenodo.py  validate_qm9.py
tests/: .coverage  .gitignore  conftest.py  test_api.py  test_package_init.py
tests/calculator/: test_dftbplus.py  test_orca.py  test_pyscf.py  test_qm.py  test_xtb.py  test_xtb_cli.py
tests/cli/: test_dftb_setup.py  test_import.py  test_slurm.py
tests/data/calculator/: water.mol  water.xyz
tests/data/calculator/gaussian/: README.md
tests/data/calculator/modes/: geo_opt.gen  hessian.out  vibrations.tag
tests/data/calculator/orca/: water_freq.hess  water_freq.property.txt
tests/data/calculator/turbomole/: README.md
tests/data/regression/: anthraquinones.csv  water.xyz
tests/data/thermo/: geo_opt.gen  thermo.in
tests/integration/: test_dftb_workflow.py
tests/thermo/: .coverage  test_InputFileReader.py  test_anthraquinone_regression.py  test_api.py  test_atoms.py  test_cell.py  test_conformers.py  test_ensemble.py  test_heat_capacity_cv.py  test_kinetics.py  test_main.py  test_pka.py  test_reactions.py  test_redox_screening.py  test_redox_workflow.py  test_screening.py  test_system.py  test_thermo.py  test_version.py
tests/thermo/__pycache__/: api.py
tests/utils/: test_custom_logging.py
