[build-system]
requires = ["setuptools>=42", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ThermoScreening"
dynamic = [
    "version"
]
authors = [
  { name="Stefanie Kröll", email="kroell.stefanie123@gmail.com" },
  { name="Josef M. Gallmetzer", email="gallmetzer.josef@gmail.com" },
]
description = "A Python package for screening molecules for their thermochemical properties."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy >= 1.26",
    "scipy",
    "pymatgen",
    "beartype",
    "ase",
    "rdkit",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "pytest-cov"
]
lint = [
    "pylint >= 4.0, < 5",
]
docs = [
    "sphinx",
]

[tool.setuptools.packages.find]
exclude = ["external"]

[tool.setuptools_scm]
version_file = "ThermoScreening/__version__.py"

[project.scripts]
thermo = "ThermoScreening.cli.thermo:main"

[tool.pylint.main]
fail-under = 7.0
persistent = false
py-version = "3.10"

[tool.pylint.reports]
score = true
