[build-system]
requires = ["setuptools>=42", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ThermoScreening"
dynamic = [
    "version"
]
authors = [
  { name="Stefanie Kröll", email="kroell.stefanie123@gmail.com" },
  { name="Josef M. Gallmetzer", email="gallmetzer.josef@gmail.com" },
]
description = "A Python package for screening molecules for their thermochemical properties."
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["thermochemistry", "DFTB+", "xTB", "screening", "computational chemistry"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "numpy >= 1.26",
    "scipy",
    "pymatgen-core >= 2026.5.18",
    "beartype",
    "ase",
    "rdkit",
    "PQAnalysis >= 1.3.0",
]

[project.urls]
Homepage = "https://github.com/MolarVerse/ThermoScreening"
Documentation = "https://molarverse.github.io/ThermoScreening/"
Repository = "https://github.com/MolarVerse/ThermoScreening"
Issues = "https://github.com/MolarVerse/ThermoScreening/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "pytest-cov"
]
lint = [
    "pylint >= 4.0, < 5",
]
docs = [
    "sphinx",
]

[tool.setuptools.packages.find]
# only ship the package itself (not docs/examples/benchmarks/tests/external)
include = ["ThermoScreening", "ThermoScreening.*"]

[tool.setuptools_scm]
version_file = "ThermoScreening/__version__.py"

[project.scripts]
thermo = "ThermoScreening.cli.thermo:main"

[tool.pylint.main]
fail-under = 7.0
persistent = false
py-version = "3.12"

[tool.pylint.reports]
score = true
